objects/ssot__CommunicationSubscriptionTiming__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CommunicationSubscriptionConsentId__c</fullName>
        <label>Communication Subscription Consent</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Communication Subscription Timing Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Offset__c</fullName>
        <label>Offset</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PreferredEndTime__c</fullName>
        <label>Preferred Time End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__PreferredStartTime__c</fullName>
        <label>Preferred Time Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__PreferredTimeZoneId__c</fullName>
        <label>Preferred Time Zone</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TimeUOM__c</fullName>
        <label>Time UOM</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761157143_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CommunicationSubscriptionConsent_Id__rel</label>
        <referenceTo>ssot__CommunicationSubscriptionConsent__dlm</referenceTo>
        <relationshipLabel>CommunicationSubscriptionConsent_Id__rel</relationshipLabel>
        <relationshipName>rel_1697761157143_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761157286_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CommunicationSubscriptionTiming_Comm_rel</label>
        <referenceTo>ssot__CommunicationSubscriptionConsent__dlm</referenceTo>
        <relationshipLabel>CommunicationSubscriptionTiming_Comm_rel</relationshipLabel>
        <relationshipName>rel_1697761157286_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>